Agregado lo nuevo de css y html

--- a/Web Pro Players EA FC/eafc.html
+++ b/Web Pro Players EA FC/eafc.html
@@ -12,14 +12,11 @@
         rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bangers&display=swap">
-
+    <script href="/script.js"></script>
 </head>
 
 <body>
-
-
     <!---HEADER------>
-
     <section class="header ">
         <div class="header-social">
             <i class="fa-brands fa-facebook-f"></i>
@@ -29,9 +26,7 @@
             <a class="header-social">Log Out</a>
         </div>
         <header class="header-header">
-
             <img src="/Imagenes/Logo.png" alt="logo-header" class="logo-img" />
-
             <section class="a-header-div" id="desk-buttons">
                 <div class="header-ul">
                     <a class="a-buttons a-home" href="eafc.html">Home</a>
@@ -41,15 +36,11 @@
                     <a class="a-buttons" href="#">Sponsors</a>
                     <a class="a-buttons" href="#">News</a>
                     <button class="pro-gaming">PRO GAMING</button>
-
                 </div>
-
-
         </header>
     </section>
 
     <!------CONTENT------>
-
     <div class="content">
         <section class="intro-desk">
             <div class="main title">
@@ -59,13 +50,148 @@
             <div class="paragraph">
                 <h1 class="paragraph-text">
                     Join our esports team called the GORILLA to enjoy a great gaming community and competitions at the
-                    highest level!!!</h1>
+                    highest level!!!
+                </h1>
             </div>
             <div class="lema">
                 <p class="">¡THIS IS GORILLAS!</p>
             </div>
         </section>
     </div>
+
+    <!-----PROGRAM----->
+    <div>
+        <section class="main-program">
+            <div class="main-p-title">
+                <h2 class="program-title">GORILLAS <i class="fa-solid fa-trophy"></i></h2>
+                <p class="orange-bar">___________</p>
+            </div>
+            <article class="cards container">
+                <div class="cards">
+                    <img src="" alt="">
+                    <i class="fa-solid fa-shop"></i>
+                    <h2 class="shopping">Merchandising</h2>
+                    <p class="shopp-2">Shop any article of the team ¡Gorillas!</p>
+                </div>
+
+                <div class="cards">
+                    <i class="fa-solid fa-trophy"></i>
+                    <h2 class="trophy">Awards</h2>
+                    <p class="trophy-desc">Check out the trophies won by our team!</p>
+                </div>
+                <div class="cards">
+                    <i class="fa-solid fa-calendar-days"></i>
+                    <h2 class="calendar">Upcoming Events</h2>
+                    <p class="calendar-desc">Stay updated with our latest events and tournaments!</p>
+                </div>
+                <div class="cards twitch">
+                    <i class="fa-brands fa-twitch"></i>
+                    <h2 class="twitch-title">Live Streams</h2>
+                    <p class="twitch-desc">Watch our live streams on Twitch!</p>
+                </div>
+            </article>
+        </section>
+    </div>
+
+    <!-----MEMBERS----->
+    <section class="esports container">
+        <div class="team-title">
+            <h2 class="gorilla-title">Gorillas Members</h2>
+            <p class="orange-bar">_________________</p>
+        </div>
+        <div id="members">
+            <div class="members-container">
+                <div class="member-card">
+                    <img height="200px" width="200px"
+                        src="/Imagenes/Imagen de WhatsApp 2024-07-10 a las 11.11.10_f44e2964.jpg" alt="Fry">
+                    <div class="data-esports">
+                        <h2 class="name">Juan Fernando Almeida</h2>
+                        <p class="esports-position">Midfielder, Co-founder</p>
+                        <p class="member-description">Juan Fernando Almeida was born in Quito and plays as a midfielder
+                            for the Gorillas team</p>
+                    </div>
+                </div>
+                <div class="member-card">
+                    <img height="300px" width="200px"
+                        src="/Imagenes/Imagen de WhatsApp 2024-07-10 a las 11.12.09_3a58dbb4.jpg" alt="garces-img">
+                    <div class="data-esports">
+                        <h2 class="name">David Gárces</h2>
+                        <p class="esports-position">Defense, Noob player</p>
+                        <p class="member-description">David Gárces, known as 'chespirajo,' was born in Quito and is
+                            learning to play to join the Gorillas team</p>
+                    </div>
+                </div>
+                <div class="member-card">
+                    <img height="300px" width="300px"
+                        src="/Imagenes/Imagen de WhatsApp 2024-07-10 a las 11.12.56_9e98d8e3.jpg" alt="Hectitor">
+                    <div class="data-esports">
+                        <h2 class="name">Hector Villares</h2>
+                        <p class="esports-position">Water Carrier</p>
+                        <p class="member-description">Hector Villares, born in Quito, is known within the Gorillas team
+                            as part of the staff and the one who brings water to the players</p>
+                    </div>
+                </div>
+                <div class="member-card">
+                    <img height="300px" width="300px"
+                        src="/Imagenes/Imagen de WhatsApp 2024-07-10 a las 13.07.42_e2f92453.jpg" alt="Chypi">
+                    <div class="data-esports">
+                        <h2 class="name">Steve Muñoz</h2>
+                        <p class="esports-position">Big Chief</p>
+                        <p class="member-description">Steve Muñoz was born in Quito but has since traveled to Canada in
+                            search of a better and more peaceful life. However, he found that his biggest enemy is the
+                            Big Chief, and yes, he quit FIFA because he was not good at it</p>
+                    </div>
+                </div>
+                <div class="member-card">
+                    <img height="300px" width="300px" src="/Imagenes/IMG-20240710-WA0023.jpg" alt="Jimmy">
+                    <div class="data-esports">
+                        <h2 class="name">Jimmy Jara</h2>
+                        <p class="esports-position">Forward</p>
+                        <p class="member-description">Jimmy Jara was born in Quito and now lives in the USA in New
+                            Mexico. He is one of the forwards for the Gorillas team.</p>
+                    </div>
+                </div>
+                <div class="member-card">
+                    <img height="300px" width="300px" src="/Imagenes/IMG-20240710-WA0024.jpg" alt="Juan">
+                    <div class="data-esports">
+                        <h2 class="name">Juan Sebastián Sotomayor</h2>
+                        <p class="esports-position">Forward, Co-Founder</p>
+                        <p class="member-description">Juan Sebastián Sotomayor was born in Quito. He is part of the
+                            forward line and one of the founders of the Gorillas team.</p>
+                    </div>
+                </div>
+                <div class="member-card">
+                    <img height="300px" width="300px" src="/Imagenes/IMG-20240710-WA0025.jpg" alt="Daniel">
+                    <div class="data-esports">
+                        <h2 class="name">Daniel Torres Muñoz</h2>
+                        <p class="esports-position">Co-Founder</p>
+                        <p class="member-description">Daniel Torres Muñoz was born in Quito and is one of the founders
+                            of the Gorillas team. He also maintains a very close friendship with David P.</p>
+                    </div>
+                </div>
+                <div class="member-card">
+                    <img height="300px" width="300px" src="/Imagenes/IMG-20240710-WA0026.jpg" alt="David">
+                    <div class="data-esports">
+                        <h2 class="name">David Proaño</h2>
+                        <p class="esports-position">Collaborator</p>
+                        <p class="member-description">David Proaño is a contributing member and one of the latest
+                            signings; he is also very close friends with Daniel Torres.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+
+
+
+
+
+
+
+
 </body>
 
 </html>
