Añadido el footer

--- a/Web Pro Players EA FC/eafc.html
+++ b/Web Pro Players EA FC/eafc.html
@@ -182,6 +182,15 @@
         </div>
     </section>
 
+    <!-----FOOTER------>
+<section class="rigths">
+    <div class="rights-logo">
+<img  width="60px" height="60px"   src="/Imagenes/logo-two.png" alt="Gorillas">
+    </div>
+    <div class="rights-text-cont">
+        <p class="rights-text">2024 Team Gorillas Ecuador, Some Rights Reserved.</p>
+    </div>
+</section>
 
 
 
